// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextSection renders a simple paragraph 1`] = `
<p
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>test</p>",
    }
  }
/>
`;

exports[`TextSection renders several paragraph 1`] = `
<p
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>test</p><p>test</p><p>test</p>",
    }
  }
/>
`;

exports[`TextSection renders several paragraphs with an unordered list in the middle 1`] = `
<p
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>test</p><ul><li>1</li>1<li></li></ul><p>test</p>",
    }
  }
/>
`;
